--- a/proxy/proxy.config
+++ b/proxy/proxy.config
@@ -44,16 +44,32 @@
       <serverUrl url="http://tryitlive.arcgis.com/arcgis/rest/services/"
           matchAll="true">
       </serverUrl>
-      <serverUrl url="http://services.arcgis.com/b6gLrKHqgkQb393u/arcgis/rest/services/"
+      <serverUrl url="http://arcgis4localgov2.maps.arcgis.com"
+          matchAll="true">
+      </serverUrl>
+      <serverUrl url="http://arcgis-gov-1244222493.us-west-2.elb.amazonaws.com/arcgis/rest/services"
           matchAll="true">
       </serverUrl>
       <serverUrl url="https://api-ssl.bitly.com/v3/shorten"
           matchAll="true"
-          accessToken=""
+          accessToken="55149a14e4bb489dbbfab14d8cc7e16e"
           tokenParamName="access_token"
           rateLimit="50"
           rateLimitPeriod="10">
       </serverUrl>
+      <serverUrl url="http://route.arcgis.com/arcgis/rest/" matchAll="true"
+          clientId=""
+          clientSecret=""
+          rateLimit="50"
+          rateLimitPeriod="10">
+      </serverUrl>
+       <serverUrl url="https://route.arcgis.com/arcgis/rest/" 		matchAll="true"
+          clientId=""
+          clientSecret=""
+          rateLimit="50"
+          rateLimitPeriod="10">
+      </serverUrl>
+
 
   </serverUrls>
 
