--- a/proxy/proxy.config
+++ b/proxy/proxy.config
@@ -47,6 +47,9 @@
       <serverUrl url="http://arcgis4localgov2.maps.arcgis.com"
           matchAll="true">
       </serverUrl>
+      <serverUrl url="http://tasks.arcgisonline.com/ArcGIS/rest/services"
+          matchAll="true">
+      </serverUrl>
       <serverUrl url="http://arcgis-gov-1244222493.us-west-2.elb.amazonaws.com/arcgis/rest/services"
           matchAll="true">
       </serverUrl>
