--- a/proxy/proxy.config
+++ b/proxy/proxy.config
@@ -40,7 +40,9 @@
           rateLimit="50"
           rateLimitPeriod="10">
       </serverUrl>   -->
-
+      <serverUrl url="http://services.arcgis.com/b6gLrKHqgkQb393u/arcgis/"
+        matchAll="true">
+      </serverUrl>
       <serverUrl url="http://tryitlive.arcgis.com/arcgis/rest/services/"
           matchAll="true">
       </serverUrl>
