--- a/proxy/proxy.config
+++ b/proxy/proxy.config
@@ -43,6 +43,9 @@
       <serverUrl url="http://services.arcgis.com/b6gLrKHqgkQb393u/arcgis/"
         matchAll="true">
       </serverUrl>
+	  <serverUrl url="http://services.arcgis.com/doC3DvW5p9jGtDST/arcgis/"
+        matchAll="true">
+      </serverUrl>
       <serverUrl url="http://tryitlive.arcgis.com/arcgis/rest/services/"
           matchAll="true">
       </serverUrl>
