proxy added tapestry layer

--- a/proxy/proxy.config
+++ b/proxy/proxy.config
@@ -40,7 +40,10 @@
           rateLimit="50"
           rateLimitPeriod="10">
       </serverUrl>   -->
-      <serverUrl url="http://services.arcgis.com/b6gLrKHqgkQb393u/arcgis/"
+    <serverUrl url="http://services.arcgis.com/P3ePLMYs2RVChkJx/arcgis/"
+        matchAll="true">
+    </serverUrl>  
+    <serverUrl url="http://services.arcgis.com/b6gLrKHqgkQb393u/arcgis/"
         matchAll="true">
       </serverUrl>
 	  <serverUrl url="http://services.arcgis.com/doC3DvW5p9jGtDST/arcgis/"
