--- a/proxy/proxy.config
+++ b/proxy/proxy.config
@@ -42,7 +42,10 @@
       </serverUrl>   -->
     <serverUrl url="http://services.arcgis.com/P3ePLMYs2RVChkJx/arcgis/"
         matchAll="true">
-    </serverUrl>  
+    </serverUrl>
+    <serverUrl url="http://services6.arcgis.com/Pu6Fai10JE2L2xUd/arcgis/"
+        matchAll="true">
+    </serverUrl> 
     <serverUrl url="http://services.arcgis.com/b6gLrKHqgkQb393u/arcgis/"
         matchAll="true">
       </serverUrl>
